# vmessanger

./: .gitignore  DEPLOY_GUIDE.md  FEATURES_SUMMARY.md  INTEGRATION_COMPLETE.md  OPTIMIZATION_REPORT.md  README.md  ROLLBACK_PARTITIONING.sql  TELEGRAM_FEATURES.md  capacitor.config.ts  main.js  next.config.js  next.config.ts  package-lock.json  package.json  preload.js  prompt  server.js
.github/workflows/: android_build.yml  pwa_to_apk.yml
app/: ClientProviders.tsx  globals.css  layout.tsx  page.tsx
app/[id]/: page.tsx
app/admin/: AdminDashboard.tsx  layout.tsx  page.tsx
components/: CallModal.tsx  ChatMessage.tsx  ChatSidebar.tsx  ChatWindow.tsx  CreateGroupModal.tsx  DevicesScreen.tsx  EmojiGifPicker.tsx  FileMessage.tsx  GroupInfoPanel.tsx  GroupProfilePanel.tsx  MediaViewer.tsx  QRCodeSidebar.tsx  RichTextInput.tsx  Skeleton.tsx  StoriesRow.tsx  TextSelectionMenu.tsx  ThemePicker.tsx  TitleBadge.tsx  TitleBar.tsx  UserProfilePanel.tsx  VerifiedBadge.tsx
hooks/: useDeviceSession.ts  useE2E.ts  useKineticScroll.ts  useNotificationSound.ts  useProfanityFilter.ts
lib/: botUtils.ts  crypto.ts  email.ts  formatText.ts  i18n.ts  peerColor.ts  profanityFilter.ts  rateLimiter.ts  supabase.ts  theme.tsx
prisma/: schema.prisma  seed-admin.ts
public/: manifest.json  sw.js
types/: models.ts  next-auth.d.ts  nodemailer.d.ts
vdesktop/: CMakeLists.txt  resources.qrc
vdesktop/include/: chatlistitem.h  chatmessage.h  mainwindow.h  networkmanager.h
vdesktop/src/: chatlistitem.cpp  chatmessage.cpp  main.cpp  mainwindow.cpp  networkmanager.cpp
(+50 files in other folders)
